--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,18 @@
+@font-face {
+    font-family: swbtFont;
+    src: url(/fonts/Parisine_Bold.otf);
+  }
+
 a {
     text-decoration: none;
     color: inherit
+}
+
+.swbt-font{
+    font-family: swbtFont;
+}
+
+
+.selected-nav{
+    background-color: #99cc33;
 }
